--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,3 +15,19 @@ color: #333;
 #container h1 {
     font-size: 20px;
 }
+
+#cabecera {
+    background: #33a;
+    margin: 0;
+    color: white;
+    padding: 0.5em;
+    font-weight: bold;  
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+
+}
+
+#cabecera #tagline {
+    font-weight: normal;
+    font-size: 0.8em;
+    padding: 0 0 0 1em; 
+ } 
