--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,16 @@
 body{
+background: black;    
 text-align: left;
 font-family: Arial, Helvetica, sans-serif;
 
 color: #333;
+margin: 0;
+padding: 0; 
 }
 
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -18,17 +21,26 @@ color: #333;
 }
 
 #cabecera {
-    background: #33a;
+    background: #37488b;
     margin: 0;
     color: white;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em; 
     font-weight: bold;  
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
 
 }
 
+#cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
+}
 #cabecera #tagline {
     font-weight: normal;
     font-size: 0.8em;
     padding: 0 0 0 1em; 
  } 
+
+ #post {
+     background: white;
+     padding: 1em;
+ }
