--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,3 +32,10 @@ color: #333;
     font-size: 0.8em;
     padding: 0 0 0 1em; 
  } 
+
+ #footer {
+     background: #777;
+     color: white;
+     text-align: center;
+     padding: 0.5em;
+ }
