Se modifico el tamaño y el color del footer, ya que no tenia errores ortograficos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,8 +45,8 @@ padding: 0;
  }
 
  #footer {
-     background: #777;
+     background: black;
      color: white;
      text-align: center;
-     padding: 0.5em;
+     padding: 0.2em;
 }
